--- a/preamble/preamble1.tex
+++ b/preamble/preamble1.tex
@@ -1,6 +1,6 @@
 %--------------------------------------------------------------------
 % Эта преамбула с комментариями для написания лабораторных работ по
-% физике. В его основе информация из книги С. М. Львовского "Набор и
+% физике. В еe основе информация из книги С. М. Львовского "Набор и
 % верстка в пакете Latex", а также материалы по курсу "Документы и
 % презентации в Latex" от ВШЭ https://www.coursera.org/learn/latex. Ну
 % и мой опыт (1 год и 15 лабораторных работ + 2 Вопроса по выбору)
